@@ -101,6 +101,7 @@ Misc:
  - SDL: Increase default audio buffer size to 1024 samples
  - GBA: Add override for Pokemon Pinball: Ruby and Sapphire rumble
  - SDL: More responsive rumble
+ - GBA Hardware: Clean up dead code in GBP
 
 0.4.1: (2016-07-11)
 Bugfixes:
